Used a different technique to create ant's color. Also added speed buttons

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -69,6 +69,7 @@
      <Compile Include="Assets\Scripts\TileWall.cs" />
      <Compile Include="Assets\Scripts\UI.cs" />
      <Compile Include="Assets\Scripts\UIAIInfo.cs" />
+     <Compile Include="Assets\Scripts\UISpeed.cs" />
      <Compile Include="Assets\Scripts\UIWorldInfo.cs" />
      <Compile Include="Assets\Scripts\World.cs" />
      <Compile Include="Assets\Scripts\WorldGenerator.cs" />
